2006-03-15  David Reveman  <davidr@novell.com>

	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/window.c: Add restackWindowBelow.

2006-03-14  David Reveman  <davidr@novell.com>

	* plugins/switcher.c: Opacity, brightness and saturation as adjustable
	options. (Greg)

	* src/window.c (syncWindowPosition): Move frame window now instead of
	waiting for client window to change before moving it.

	* plugins/move.c (moveTerminate): Sync window position before
	releasing pointer grab so that the EnterNotify event from the release
	go to the correct window.

	* src/window.c (unmapWindow): Put window in withdrawn state when
	being unmapped. Should make it work better with KDE. (Tim Northover)

	* src/screen.c (addScreen): Fix ambient and diffuse light.

	* src/main.c (main): Add --version command line option.

	* src/event.c:
	* src/screen.c:
	* include/compiz.h: Add bindings for changing window opacity.

2006-03-14  Radek Doulik  <rodo@novell.com>

	* src/event.c (handleEvent): handle minimize/maximize/unmaximize
	window keybindings

	* src/screen.c: added minimize/maximize/unmaximize window
	options/keybindings

	* src/window.c (maximizeWindow): new helper function
	(unmaximizeWindow): ditto

2006-03-14  David Reveman  <davidr@novell.com>

	* plugins/scale.c: Add darken background option (Daniel G. Taylor).

2006-03-13  David Reveman  <davidr@novell.com>

	* src/display.c (eventLoop):
	* include/compiz.h:
	* src/screen.c (addScreen): CopySubBufferMESA support.

2006-03-07  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (lower_window):
	Remove unused variable tmp.

	* src/event.c:
	* src/display.c:
	* src/window.c:
	* src/screen.c:
	* include/compiz.h: Better window stacking support.

	* gnome/window-decorator/gnome-window-decorator.c: Lower window
	when clicking button 2 on titlebar.

	* src/window.c (ensureWindowVisibility): Only ensure that window is
	visible if it isn't a override redirect window, dock window or